css/mirador.css
/* ... */
.items-listing h4, .items-listing h3 {
  margin: 0;
  font-weight: normal;
  color:rgba(0,0,0,0.7);
}
.items-listing h3 {
  color:rgba(0,0,0,0.8);
  margin-top:2px;
  font-size: 1em;
}
.manifest-title h3 {
  line-height: 1.2em;
  height: 3.6em;
  position: relative;
  overflow: hidden;
}
.manifest-title h3:after {
  content: "";
  text-align: right;
  position: absolute;
  bottom: 0;
  right: 0;
  width: 20%;
  height: 1.2em;
  /*background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);*/
}
.item-info {
  position: absolute;
  bottom: 0;
  display: table;
  width: 100%;
}
.item-info-row {
  display: table-row;
}
.repo-label, .canvas-count {
  display: table-cell;
  white-space: nowrap;
  font-size: .85em;
  vertical-align: bottom;
  color: gray;
}
.canvas-count {
  text-align: right;
}
.repo-image, .select-metadata, .preview-images {
  float:left;
  margin-right:15px;
  height: 80px;
}
.preview-thumb {
  display: inline-flex;
  position: absolute;
}
.preview-images {
  margin-right:0;
}

.preview-image {
  background-color: gray;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
  float:left;
  margin-right:15px;
  min-height: 25px;
  min-width: 25px;
  /*transition: all 0.1s ease-out; ?*/
}

/*.preview-image:hover {
  box-shadow: 0px 0px 5px rgba(0, 191, 255, 1);
  transform: scale(1.1);
  transition: all 0.6 ease-out;
}*/

.thumbnail-image {
  background-color: gray;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
  float:left;
  margin-right:15px;
  /*height: 80px;*/
  /* background-image: url(../images/loading.gif); */
  /* background-position: center; */
  /* background-repeat: no-repeat; */
}

img.thumbnail-image.highlight {
  border: 2px solid deepskyblue;
}

li.highlight {
  margin-bottom: 11px !important;
  padding-left: 8px !important;
  padding-right: 8px !important;
}
.remaining {
  line-height:80px;
  opacity: 0.5;
  text-align: center;
  box-sizing: border-box;
  vertical-align: middle;
  width: 20px;
}
#load-controls {
  margin-top: 20px;
}
#load-controls:after {
  content: "";
  display: table;
  clear: both;
}
#load-controls input {
  height:25px;
  border:1px solid #d3d3d3;
  color: gray;
  background:none;
  /*border-radius: 2px;*/
  transition: border-color 0.3s ease-out;
}
#manifest-select-menu .remove-object-option {
  padding-top: 5px;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: bold;
  transition: color 0.2s ease-out;
}
#manifest-select-menu .remove-object-option:hover {
  color: rgb( 146, 145, 145 );
}
#manifest-search-form {
  float:left;
}
#manifest-search-form label {
  margin-right: 6px;
}
#url-load-form {
  float: right;
}
#url-load-form input[type="text"] {
  width: 250px;
  margin: 0 5px;
}
#load-controls input[type="submit"]{
  height: 29px;
}
#manifest-search i {
  position:absolute;
  left:0;
  color:black;
}
#manifest-search-form input:focus, #url-load-form input:focus,
#manifest-search-form input:focus,
#url-load-form input:focus,
#url-load-form input[type="submit"]:hover{
  outline:none;
  border-color:deepskyblue;
}
#manifest-search i {
  width:25px;
  height:25px;
  color:red;
  border: 1px solid red;
}

.select-results {
  height:100%;
  overflow-y: scroll;
  margin-top: 10px;
  border-top: 1px solid gray;
}

/* main-menu workspaces-panel */
#workspace-select-menu {
  background-color: #333;
  text-align:center;
  padding:20%;
  padding-top:0;
  box-sizing:border-box;
}
#workspace-select-menu h1 {
  color: lightgray;
  padding-bottom: 3%;
  font-weight: normal;
}
#workspace-select-menu h3, #workspace-select-menu h2 {
  color:lightGray;
}
.select-grid {
  width:60%;
  min-width:300px;
  position:relative;
  margin:auto;
}
.grid-row {
  content: "";
  display: table;
  clear: both;
  margin: 0 auto;
}
.grid-item {
  height: 50px;
  width: 50px;
  float: left;
  padding: 4px;
  display: block;
}
.grid-item .grid-icon {
  background:gray;
  height: 50px;
  width: 50px;
  border-radius: 7px;
  display: block;
  transition: all 0.2s ease-out;
  margin:auto;
}
.grid-item.hovered .grid-icon {
  background:deepSkyBlue;
  box-shadow: 0 0 10px black;
  transform: scale(1.1) translateY(-10px) translateX(-5px);
  transition: all 0.2s ease-out;
}
.grid-text {
  display:none;
}

/* Workspace scaffolding */
.workspace-container {
  position: absolute;
  left:0;
  right:0;
  top:0;
  bottom:0;
  overflow: hidden;
  box-sizing: border-box;
  margin: 3px;
}

/* invisible layout slot styling */
.layout-slot {
  position: absolute;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Slot Scaffolding */

.slot {
  width:100%;
  height:100%;
  box-shadow: inset 0 0 35px black;
  overflow: hidden;
  box-sizing:border-box;
}
.slot .remove-slot-option {
  position: absolute;
  margin:10px;
  color:gray;
  cursor: pointer;
}
.slot .remove-slot-option:hover {
  float:left;
  margin:10px;
  color:lightGray;
}
.slot h1 {
  color: gray;
  text-align: center;
  font-weight: normal;
}
.slot:hover h1 {
  color: lightgray;
}
.plus {
  font-size: 170px;
  font-weight: bold;
  margin-bottom: 20px;
}
.slotIconContainer {
  position:absolute;
  top:50%;
  margin-top:-260px;
  width:100%;
  overflow:hidden;
  pointer-events: none;
}
.slot:hover, .slot.focused, .slot.draggedOver {
  box-shadow: inset 0 0 35px rgba(94, 219, 255, 1);
}
.slot.draggedOver .dropMeMessage, .slot.draggedOver .dropIcon {
  display:block;
}
.dropMeMessage, .dropIcon {
  display:none;
}
.slot.draggedOver .addItemText, .slot.draggedOver .plus span {
  display:none;
}
.addItemLink {
  display:block;
  position:absolute;
  top:0;
  bottom:0;
  right:0;
  left:0;
  cursor: pointer;
}
.dropMask {
  position:absolute;
  top:0;
  bottom:0;
  right:0;
  left:0;
  display:none;
}

/* window scaffolding */
.window {
  position:relative;
  width:100%;
  height:100%;
  overflow: hidden;
  background-color: #333;
}
.manifest-info {
  overflow: auto;
  background: #fafafa;
}
.manifest-info .mirador-btn {
  font-size: .8em;
}
/* ... */

